fix bug with links

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <div class="modal__wr-input">
                                 <label class="modal__lable" for="modal-phone-call">Ваш телефон: </label>
                                 <input type="tel" id="modal-phone-call" name="phone" placeholder="+375295678899"
-                                       required pattern="/(?:\+|\d)[\d\-\(\) ]{9,}\d/g"/>
+                                       required />
                             </div>
                             <div class="modal__wr-input">
                                 <label class="modal__lable" for="modal-email-call">Ваш e-mail: </label>
@@ -80,12 +80,12 @@
 
         <nav>
             <ul class="navigation">
-                <li><a href="#types">Типы антискользящего покрытия</a></li>
-                <li><a href="#order">Стоимость</a></li>
-                <li><a href="#works">Наши работы</a></li>
-                <li><a href="#">Средства для ухода и лечения копыт у коров</a></li>
-                <li><a href="#">Обрезка и лечение кожи и копыт у коров</a></li>
-                <li><a href="#contacts">Контакты</a></li>
+                <li><a class="navigation__link" href="#types">Типы антискользящего покрытия</a></li>
+                <li><a class="navigation__link" href="#order">Стоимость</a></li>
+                <li><a class="navigation__link" href="#works">Наши работы</a></li>
+                <li><a class="navigation__link" href="#">Средства для ухода и лечения копыт у коров</a></li>
+                <li><a class="navigation__link" href="#">Обрезка и лечение кожи и копыт у коров</a></li>
+                <li><a class="navigation__link" href="#contacts">Контакты</a></li>
             </ul>
         </nav>
     </header>
@@ -102,7 +102,7 @@
                 остановить ежемесячные растяжки коров</p>
             <form class="content-main__wr-message">
                 <input class="content-main__phone" type="tel" placeholder="+375(33) 543-23-45"
-                       pattern="(?:\+|\d)[\d\-\(\) ]{9,}\d">
+                    >
                 <button class="content-main__send-phone btn-style">Остановить растяжки</button>
             </form>
         </div>
@@ -323,7 +323,7 @@
                                 <div class="modal__wr-input">
                                     <label class="modal__lable" for="modal-phone-minimum">Ваш телефон: </label>
                                     <input type="tel" id="modal-phone-minimum" name="phone" placeholder="+375295678899"
-                                           required pattern="/(?:\+|\d)[\d\-\(\) ]{9,}\d/g"/>
+                                           required />
                                 </div>
                                 <div class="modal__wr-input">
                                     <label class="modal__lable" for="modal-email-minimum">Ваш e-mail: </label>
@@ -392,7 +392,7 @@
                                 <div class="modal__wr-input">
                                     <label class="modal__lable" for="modal-phone-optimum">Ваш телефон: </label>
                                     <input type="tel" id="modal-phone-optimum" name="phone" placeholder="+375295678899"
-                                           required pattern="/(?:\+|\d)[\d\-\(\) ]{9,}\d/g"/>
+                                           required/>
                                 </div>
                                 <div class="modal__wr-input">
                                     <label class="modal__lable" for="modal-email-optimum">Ваш e-mail: </label>
@@ -460,7 +460,7 @@
                                 <div class="modal__wr-input">
                                     <label class="modal__lable" for="modal-phone-vip">Ваш телефон: </label>
                                     <input type="tel" id="modal-phone-vip" name="phone" placeholder="+375295678899"
-                                           required pattern="/(?:\+|\d)[\d\-\(\) ]{9,}\d/g"/>
+                                           required />
                                 </div>
                                 <div class="modal__wr-input">
                                     <label class="modal__lable" for="modal-email-vip">Ваш e-mail: </label>
@@ -620,7 +620,7 @@
                     <label class="order-from__lable" for="order-phone">Ваш телефон: </label>
                     <input class="order-from__input" type="tel" id="order-phone" name="phone"
                            placeholder="+375296429295"
-                           required pattern="/(?:\+|\d)[\d\-\(\) ]{9,}\d/g"/>
+                           required/>
                 </div>
                 <div class="order-from__wr-input">
                     <label class="order-from__lable" for="order-email">Ваш e-mail: </label>
