--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                 <li><a class="navigation__link" href="#contacts">Контакты</a></li>
             </ul>
         </nav>
+
+        <div class="header-burger">
+            <span></span>
+        </div>
     </header>
 
 
