fix modal for mobile

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                                     1 здание: 4прохода площадью 1112кв м, 4прохода: 2- шириной по 3,5 и 2прохода по
                                     2,7м</p>
                             </div>
-                            <form action="#" class="modal__form">
+                            <form action="#" class="modal__form modal-mobile">
 
                                 <div class="modal__title">Оставить заявку</div>
                                 <p class="modal__text-form">Оставьте свои контакты,
@@ -382,7 +382,7 @@
                                     1 здание: 4прохода площадью 1112кв м, 4прохода: 2- шириной по 3,5 и 2прохода по
                                     2,7м</p>
                             </div>
-                            <form action="#" class="modal__form">
+                            <form action="#" class="modal__form modal-mobile">
 
                                 <div class="modal__title">Оставить заявку</div>
                                 <p class="modal__text-form">Оставьте свои контакты,
@@ -451,7 +451,7 @@
                                     1 здание: 4прохода площадью 1112кв м, 4прохода: 2- шириной по 3,5 и 2прохода по
                                     2,7м</p>
                             </div>
-                            <form action="#" class="modal__form">
+                            <form action="#" class="modal__form modal-mobile">
 
                                 <div class="modal__title">Оставить заявку</div>
                                 <p class="modal__text-form">Оставьте свои контакты,
