--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <li><a class="navigation__link" href="#types">Типы антискользящего покрытия</a></li>
                 <li><a class="navigation__link" href="#order">Стоимость</a></li>
                 <li><a class="navigation__link" href="#works">Наши работы</a></li>
-                <li><a class="navigation__link" href="#">Средства для ухода и лечения копыт у коров</a></li>
-                <li><a class="navigation__link" href="#">Обрезка и лечение кожи и копыт у коров</a></li>
+<!--                <li><a class="navigation__link" href="#">Средства для ухода и лечения копыт у коров</a></li>-->
+<!--                <li><a class="navigation__link" href="#">Обрезка и лечение кожи и копыт у коров</a></li>-->
                 <li><a class="navigation__link" href="#contacts">Контакты</a></li>
             </ul>
         </nav>
@@ -268,9 +268,9 @@
     </div>
 </section>
 
-<section class="types-coverings">
+<section class="types-coverings" id="types">
     <div class="wrapper-2">
-        <h2 class="types-coverings__title" id="types">ТИПЫ АНТИСКОЛЬЗЯЩЕГО ПОКРЫТИЯ</h2>
+        <h2 class="types-coverings__title" >ТИПЫ АНТИСКОЛЬЗЯЩЕГО ПОКРЫТИЯ</h2>
         <p class="types-coverings__description">
             Мы поможем вам выбрать подходящий тип Антискользящего покрытия, исходя из вашего
             географического положения, бюджета и пожеланий
