--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,7 +43,7 @@
       <div class="modal hide fade modal-for-calling">
         <div class="modal__dialog">
           <div class="modal__content small">
-            <form action="#" class="modal__form">
+            <form id="req-call" action="#" class="modal__form">
 
               <div class="modal__title">Мы перезвоним вам</div>
               <p class="modal__text-form">
@@ -286,7 +286,7 @@
           <button class="types-coverings__item-btn small-btn-style">Подробнее</button>
         </div>
 
-        <div class="modal hide fade">
+        <div id="modal-min" class="modal hide fade">
           <div class="modal__dialog">
             <div class="modal__content">
               <div class="modal__description">
@@ -314,7 +314,7 @@
                   1 здание: 4прохода площадью 1112кв м, 4прохода: 2- шириной по 3,5 и 2прохода по
                   2,7м</p>
               </div>
-              <form action="#" class="modal__form modal-mobile">
+              <form id="msg-minimum" action="#" class="modal__form modal-mobile">
 
                 <div class="modal__title">Оставить заявку</div>
                 <p class="modal__text-form">Оставьте свои контакты,
@@ -356,7 +356,7 @@
           <button class="types-coverings__item-btn small-btn-style">Подробнее</button>
         </div>
 
-        <div class="modal hide fade">
+        <div id="modal-optimum" class="modal hide fade">
           <div class="modal__dialog">
             <div class="modal__content">
               <div class="modal__description">
@@ -384,7 +384,7 @@
                   1 здание: 4прохода площадью 1112кв м, 4прохода: 2- шириной по 3,5 и 2прохода по
                   2,7м</p>
               </div>
-              <form action="#" class="modal__form modal-mobile">
+              <form id="msg-optimum" action="#" class="modal__form modal-mobile">
 
                 <div class="modal__title">Оставить заявку</div>
                 <p class="modal__text-form">Оставьте свои контакты,
@@ -426,7 +426,7 @@
           <button class="types-coverings__item-btn small-btn-style">Подробнее</button>
         </div>
 
-        <div class="modal hide fade">
+        <div id="modal-vip" class="modal hide fade">
           <div class="modal__dialog">
             <div class="modal__content">
               <div class="modal__description">
@@ -454,7 +454,7 @@
                   1 здание: 4прохода площадью 1112кв м, 4прохода: 2- шириной по 3,5 и 2прохода по
                   2,7м</p>
               </div>
-              <form action="#" class="modal__form modal-mobile">
+              <form id="msg-vip" action="#" class="modal__form modal-mobile">
 
                 <div class="modal__title">Оставить заявку</div>
                 <p class="modal__text-form">Оставьте свои контакты,
