--- a/frontend/index.html
+++ b/frontend/index.html
@@ -610,7 +610,7 @@
 
     </div>
     <div class="order-get-price">
-      <form class="order-from">
+      <form id="msg-order" class="order-from">
         <p class="order-from__title">
           Заполните форму, <span>и наш специалист свяжется
                             с вами для предварительного
